# uwpvfs-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/uwpvfs-cli/: Cargo.toml
crates/uwpvfs-cli/src/: inject.rs  main.rs  package.rs  process.rs
crates/uwpvfs-payload/: Cargo.toml
crates/uwpvfs-payload/src/: hooks.rs  lib.rs  patterns.rs  uwp.rs  vfshide.rs  vfsignore.rs
crates/uwpvfs-payload/src/hooks/: detours.rs  dirtrack.rs  guard.rs  handlepath.rs  mod.rs  ntapi.rs  path.rs
crates/uwpvfs-shared/: Cargo.toml
crates/uwpvfs-shared/src/: ipc.rs  lib.rs  messages.rs
