[workspace]
members = [
    "crates/uwpvfs-shared",
    "crates/uwpvfs-payload",
    "crates/uwpvfs-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/coconutbird/uwpvfs-rs"

[workspace.dependencies]
uwpvfs-shared = { path = "crates/uwpvfs-shared" }
retour = { version = "0.3", features = ["static-detour"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Packaging_Appx",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
]}
colored = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
