[package]
name = "uwpvfs-cli"
description = "UWPVFS CLI - injects VFS hooking DLL into UWP processes for mod support"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "uwpvfs"
path = "src/main.rs"

[dependencies]
uwpvfs-shared = { workspace = true }
windows = { workspace = true }
colored = { workspace = true }
clap = { version = "4.5.56", features = ["derive"] }

