[package]
name = "uwpvfs-shared"
description = "Shared types and IPC protocol for UWPVFS - Virtual File System hooking for UWP games"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
windows = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
